syntax = "proto3";
package messages;
// import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";


message Start {}

message Stop {}

message Restart {}

message StatusRequest {
    string Sender = 1;
}
message StatusResponse {
    enum StateType {
        STARTED = 0;
        STOPPED = 1;
        UNKNOWN = 2;
    }
    StateType State = 1;
}

message InfoCounterRequest {
    string Sender = 1;
}
message InfoCounterResponse {
    int64 Inputs = 1;
    int64 Outputs = 2;
}

message AddressCounterRequest {
    string Sender = 1;
}
message AddressCounterResponse {
    string ID = 1;
    string Addr = 2;
}

//Ignition
enum StateType {
    NA = 0;
    UP = 1;
    DOWN = 2;
}

message ValueEvent {
    StateType state = 1;
    string coord = 2;
}

message IgnitionEvent {
    ValueEvent value = 1;    
    int64 timeStamp = 2;
    string type = 3;
}

message IgnitionStateRequest {
    string sender = 1;
}
message IgnitionStateResponse {
    
    StateType State = 1;
    int64 TimeStamp = 2;
}

message IgnitionEventsSubscription {
    string sender = 1;
}
message IgnitionEventsSubscriptionAck {}

